<resources>
    <string name="app_name">Crypto Customer Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="action_start_negotiation">Start Negotiation</string>
    <string name="ccw_add_a_note_button">ADD A NOTE</string>
    <string name="amount">Amount</string>
    <string name="arrow" translatable="false">arrow</string>
    <string name="at" translatable="false">\@</string>
    <string name="bought">Bought</string>
    <string name="broker_bank_account_title">Broker Bank Accounts</string>
    <string name="broker_locations_title">Broker Locations</string>
    <string name="buying_text">Buying: </string>
    <string name="paying_text">Paying: </string>
    <string name="buy_text_and_price">Buy: %1$s</string>
    <string name="ccw_account_alias">Enter an account alias</string>
    <string name="ccw_account_number">Enter an account number</string>
    <string name="ccw_action_filter">Filter</string>
    <string name="ccw_add_bank_account">+ Add Bank Account</string>
    <string name="ccw_add_location_warning_msg">Need to Add at least ONE Location</string>
    <string name="ccw_automatic_restock">Automatic Restock</string>
    <string name="ccw_address_line_1">Enter an address</string>
    <string name="ccw_address_line_2">Enter an address</string>
    <string name="ccw_add_location">+ Add a Location</string>
    <string name="ccw_add_your_bank_accounts">Add Your Bank Accounts</string>
    <string name="ccw_amount_to_buy">Amount to Buy</string>
    <string name="ccw_amount_title">Amount: </string>
    <string name="ccw_bank">Bank</string>
    <string name="ccw_bank_name">Enter a bank name</string>
    <string name="ccw_bank_account_customer">Customer\'s Bank Account</string>
    <string name="ccw_bank_account_broker">Broker\'s Bank Account</string>
    <string name="ccw_bank_account_title">Bank Account:</string>
    <string name="ccw_broker_exchange_rate_for_selling_item" translatable="false">1 %1$s @ %2$s %3$s</string>
    <string name="ccw_broker_information">Broker Information</string>
    <string name="ccw_cancel_caps">Cancel</string>
    <string name="ccw_cancellation_negotiation">Cancel Negotiation:</string>
    <string name="ccw_cancellation_reason_title">Cancellation Reason:</string>
    <string name="ccw_cash">Cash</string>
    <string name="ccw_cash_place_to_delivery_broker">Payment Delivery Place</string>
    <string name="ccw_cash_place_to_delivery_customer">Merchandise Reception Place</string>
    <string name="ccw_cash_place_to_deliver_title">Selected Location:</string>
    <string name="ccw_date_to_delivery_broker">Broker\'s Delivery Date</string>
    <string name="ccw_date_to_delivery_customer">Customer\'s Delivery Date</string>
    <string name="ccw_check_negotiation_details">Check Negotiation Details</string>
    <string name="ccw_city">Enter a City</string>
    <string name="ccw_contract_details_contract_title">SELLING BTC</string>
    <string name="ccw_contract_details_last_update_date">At Date: %1$s</string>
    <string name="ccw_contract_details_negotiation_details">NEGOTIATION DETAILS</string>
    <string name="ccw_contract_details_payment_method">Payment Method</string>
    <string name="ccw_contract_history_action_no_filter_text">No filter</string>
    <string name="ccw_contract_history_action_filter_succeed_text">Succeed</string>
    <string name="ccw_contract_history_action_filter_canceled_text">Canceled</string>
    <string name="ccw_contract_history_exchange_rate_amount_and_currency" translatable="false">1 %1$s @ %2$s %3$s</string>
    <string name="ccw_contract_history_sold_quantity_and_currency" translatable="false">%1$s %2$s %3$s</string>
    <string name="ccw_create">Create</string>
    <string name="ccw_crypto" translatable="false">Crypto</string>
    <string name="ccw_crypto_address_broker">Crypto Address Broker</string>
    <string name="ccw_crypto_address_customer">Crypto Address Customer</string>
    <string name="ccw_crypto_address_title">Crypto Address:</string>
    <string name="ccw_delete_caps">DELETE</string>
    <string name="ccw_delete_wallet_dialog_title">Delete Wallet</string>
    <string name="ccw_delete_wallet_dialog_msg">"Do you want to delete this wallet?"</string>
    <string name="ccw_delete_location_dialog_title">Delete Location</string>
    <string name="ccw_delete_location_dialog_msg">"Do you want to delete this location?"</string>
    <string name="ccw_delete_bank_account_dialog_title">Delete Bank Account</string>
    <string name="ccw_delete_bank_account_dialog_msg">"Do you want to delete this Bank Account?"</string>
    <string name="ccw_exchange_rate_summary" translatable="false">1 %1$s @ %2$s %3$s</string>
    <string name="ccw_finish">Finish</string>
    <string name="ccw_identity_alias_default_text">Crypto Customer</string>
    <string name="ccw_market_exchange_rate_market_exchange_rate">MARKET EXCHANGE RATE</string>
    <string name="ccw_market_exchange_rate_no_market_exchange_rates_to_show">No Market Exchange Rates to Show</string>
    <string name="ccw_navigation_view_bitcoin_balance">Bitcoin Balance</string>
    <string name="ccw_next_step">Next Step</string>
    <string name="ccw_no_locations_added">No Locations Added</string>
    <string name="ccw_no_selected_bank_account">No Selected Bank Accounts</string>
    <string name="ccw_no_selected_providers">No Selected Providers</string>
    <string name="ccw_no_selected_wallets">No Selected Wallets</string>
    <string name="ccw_open_negotiation_details_cancel_negotiation_menu_text">Cancel Negotiation</string>
    <string name="ccw_price">Price</string>
    <string name="ccw_providers">Add Provider</string>
    <string name="ccw_save">Save</string>
    <string name="ccw_select_identity_warning_msg">Need to Select an Identity</string>
    <string name="ccw_selling_details">Selling %1$s %2$s</string>
    <string name="ccw_selling_merchandise">Selling %1$s</string>
    <string name="ccw_same_currencies_providers_warning_msg">Currencies need to be different</string>
    <string name="ccw_no_providers_for_chosen_currencies_msg">There are no providers available for the selected currencies</string>
    <string name="ccw_select_providers_warning_msg">You need to select at least ONE Provider</string>
    <string name="ccw_set_identity_wizard_description">Please choose one identity to use in this wallet. This step can not be undone.</string>
    <string name="ccw_settings_locations_description">You must have at least one location to make your transactions</string>
    <string name="ccw_settings_locations_title">Manage Your Locations</string>
    <string name="ccw_start_selling_details">Selling %1$s</string>
    <string name="ccw_state_province">Enter a State/Province</string>
    <string name="ccw_unit_number" translatable="false">1</string>
    <string name="ccw_value">Value</string>
    <string name="ccw_wanted_to_buy">Wanted To Buy</string>
    <string name="ccw_welcome">Welcome</string>
    <string name="ccw_wizard_bank_account_description">You must select the Bank Account from the Bank Wallet you selected as Earning</string>
    <string name="ccw_wizard_bank_account_title">Bank Accounts</string>
    <string name="ccw_wizard_exchange_rate_providers_title">Bitcoin Wallet and Providers</string>
    <string name="ccw_wizard_exchange_rate_providers_description">Please, select a <b>Bitcoin Wallet</b></string>
    <string name="ccw_wizard_locations_description">Add at least one <b>location</b>, where transactions <b>made in person by you</b> might take place.</string>
    <string name="ccw_wizard_bitcoin_wallet_and_providers">Set a <b>Bitcoin Wallet</b> and at least one <b>Exchange Provider</b>.</string>
    <string name="ccw_select_your_bank_account">Your Bank Accounts</string>
    <string name="ccw_select_your_bank_account_text">Add <b>bank accounts</b> where Crypto Brokers will deposit your purchased money.</string>
    <string name="ccw_wizard_set_bank_accounts_description">Add at least one <b>bank account</b>, where <b>deposits from Crypto Brokers</b> will be made.</string>
    <string name="ccw_wizard_not_show_text">Don\'t show any help dialogs</string>
    <string name="ccw_your_bitcoin_wallet">Your Bitcoin Wallet</string>
    <string name="ccw_you_bought">You Bought</string>
    <string name="ccw_your_location">Your Locations</string>
    <string name="ccw_your_providers">Your Providers</string>
    <string name="ccw_zip_postal_code">Enter a Zip Code</string>
    <string name="contract_cancelled">Cancelled</string>
    <string name="contract_closed">Close</string>
    <string name="customer_locations_title">Customer Locations</string>
    <string name="customer_bank_account_title">Customer Bank Accounts</string>
    <string name="cbw_select_identity_warning_msg">Need to Select an Identity</string>
    <string name="ccw_delivery_date_title">Delivery Date</string>
    <string name="delivery_date_text">Date To Deliver:</string>
    <string name="exchange_rate_reference">Exchange Rate Reference</string>
    <string name="expiration_date_text">Expiration Date:</string>
    <string name="expiration_date_title">Negotiation Expiration Date</string>
    <string name="ccw_your_exchange_rate">Your Reference</string>
    <string name="identity_img" translatable="false">person_img</string>
    <string name="market_exchange_rate">Market Exchange Rate</string>
    <string name="negotiation_closed">Close</string>
    <string name="negotiation_cancelled">Cancelled</string>
    <string name="notes">Notes</string>
    <string name="no_contracts">No Contracts</string>
    <string name="no_brokers">No Brokers</string>
    <string name="no_new_open_negotiations">No New\nOpen Negotiations</string>
    <string name="no_new_open_contracts">No New\nOpen Contracts</string>
    <string name="payment_methods_title">Payment Methods</string>
    <string name="reception_methods_title">Reception Method</string>
    <string name="payment_method">Method: </string>
    <string name="payment_date_text">Payment Date: </string>
    <string name="payment_date_title">PAYMENT DATE</string>
    <string name="payment_date">Payment Date: </string>
    <string name="receiving">Receiving</string>
    <string name="selected_bank_account">Selected Bank Account: </string>
    <string name="selected_location">Selected Location: </string>
    <string name="selling">Selling</string>
    <string name="sell_text_and_price">Sell: %1$s</string>
    <string name="sending">Sending</string>
    <string name="status_confirm">CONFIRM</string>
    <string name="status_accepted">ACCEPTED</string>
    <string name="status_changed">CHANGED</string>
    <string name="suggested_exchange_rate">Suggested:</string>
    <string name="unit_number" translatable="false">1</string>
    <string name="about_to_expire">About to expire</string>
    <string name="waiting_for_you">Waiting for you</string>
    <string name="waiting_for_broker">Waiting for the Broker</string>
    <string name="waiting_for_closing">Negotiation is Closing</string>
    <string name="wizard_locations_title">Add Your Locations</string>
    <string name="you_will_have_to_pay_amount">You will have to pay: </string>
    <string name="yours">Yours:</string>
    <string name="ccw_your_exchange_rate_title">Selected Rate:</string>
    <string name="ccw_currency_to_pay">Currency to Pay</string>
    <string name="ccw_amount_to_pay">Amount to Pay</string>
    <string name="ccw_identity_wallet_user">Intra User Identity</string>
    <string name="ccw_identity_dialog_hint">User Name</string>
    <string name="ccw_identity_dialog_title_btc">Intra User Identity</string>
    <string name="ccw_identity_dialog_description_btc">To receive or send BTC must create an Intra User Identity</string>
    <string name="ccw_identity_dialog_description2_btc">To create the identity now?\nIndicate your User Name and push the button Create.</string>
    <string name="ccw_currency_to_buy">Currency to Buy</string>
</resources>