<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_filters"
        android:orderInCategory="100"
        android:title="@string/ccw_action_filter"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/ccw_action_no_filter"
                android:title="@string/ccw_contract_history_action_no_filter_text"/>
            <item
                android:id="@+id/ccw_action_filter_succeed"
                android:title="@string/ccw_contract_history_action_filter_succeed_text"/>
            <item
                android:id="@+id/ccw_action_filter_canceled"
                android:title="@string/ccw_contract_history_action_filter_canceled_text"/>
        </menu>

    </item>
</menu>
