<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
              android:paddingBottom="16dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <Spinner
                android:id="@+id/ccw_country_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:backgroundTint="@color/black"
                tools:listitem="@layout/ccw_spinner_item"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:textSize="16sp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp" />

            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatEditText
                android:id="@+id/ccw_city_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ccw_city"
                android:textColor="@color/black"
                android:textColorHint="#AAA"
                android:textSize="16sp"
                android:backgroundTint="@color/black"
                app:typeface="ROBOTO_REGULAR"
                android:singleLine="true" />

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatEditText
            android:id="@+id/ccw_state_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ccw_state_province"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:textColorHint="#AAA"
            android:textSize="16sp"
            app:typeface="ROBOTO_REGULAR"
            android:singleLine="true" />

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatEditText
            android:id="@+id/ccw_address_line_1_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/ccw_address_line_1"
            android:textColor="@color/black"
            android:textColorHint="#AAA"
            android:textSize="16sp"
            android:backgroundTint="@color/black"
            app:typeface="ROBOTO_REGULAR"
            android:singleLine="true" />

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatEditText
            android:id="@+id/ccw_address_line_2_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ccw_address_line_2"
            android:textColor="@color/black"
            android:textColorHint="#AAA"
            android:textSize="16sp"
            android:backgroundTint="@color/black"
            app:typeface="ROBOTO_REGULAR"
            android:layout_marginTop="-14dp"
            android:singleLine="true" />

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatEditText
            android:id="@+id/ccw_zip_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ccw_zip_postal_code"
            android:textColor="@color/black"
            android:textColorHint="#AAA"
            android:textSize="16sp"
            android:backgroundTint="@color/black"
            app:typeface="ROBOTO_REGULAR"
            android:singleLine="true"
            android:inputType="numberSigned" />
    </LinearLayout>

    <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatButton
        android:id="@+id/ccw_create_new_location_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#E5007E"
        android:text="@string/ccw_create"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>