<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ccw_wizard_title_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/ccw_wizard_color"
        android:orientation="vertical"
        android:padding="16dp">

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ccw_wizard_bank_account_title"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/ccw_wizard_bank_account_description"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ccw_selected_stock_wallets_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp">

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ccw_add_your_bank_accounts"
            android:textColor="@color/ccw_wizard_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/ccw_wizard_color"/>

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatButton
            android:id="@+id/ccw_add_bank_account_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:background="@color/ccw_wizard_color"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/ccw_add_bank_account"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ccw_selected_bank_accounts_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:listitem="@layout/ccw_wizard_recycler_view_item"
                tools:visibility="visible"/>

            <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
                android:id="@+id/ccw_selected_bank_accounts_empty_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_grey"
                android:gravity="center"
                android:text="@string/ccw_no_selected_bank_account"
                android:textColor="#888"
                android:textSize="16sp"
                android:visibility="visible"
                tools:visibility="gone"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ccw_next_step_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:background="@color/ccw_wizard_color"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp">

        <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/ccw_finish"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ccw_arrow_right_selected"
            tools:ignore="contentDescription"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>