<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/ccw_contract_history_background"
    android:paddingBottom="8dp"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp">

    <ImageView
        android:id="@+id/ccw_customer_image"
        android:layout_width="@dimen/ccw_image_width_and_height"
        android:layout_height="@dimen/ccw_image_width_and_height"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/identity_img"
        tools:src="@drawable/person"/>

    <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
        android:id="@+id/ccw_customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:layout_toEndOf="@+id/ccw_customer_image"
        android:layout_toRightOf="@+id/ccw_customer_image"
        android:singleLine="true"
        android:textColor="@color/ccw_contract_history_customer_name_text"
        android:textSize="@dimen/ccw_subtitle_text"
        tools:text="Nelson Ramirez"/>

    <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
        android:id="@+id/ccw_sold_quantity_and_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ccw_customer_name"
        android:layout_marginEnd="@dimen/margin_text"
        android:layout_marginRight="@dimen/margin_text"
        android:layout_toEndOf="@+id/ccw_customer_image"
        android:layout_toRightOf="@+id/ccw_customer_image"
        android:singleLine="true"
        android:textColor="@color/ccw_contract_history_sold_text"
        android:textSize="@dimen/ccw_title_text_size"
        android:text="@string/ccw_contract_history_sold_quantity_and_currency"/>

    <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
        android:id="@+id/ccw_last_update_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textColor="@color/ccw_contract_history_date_text"
        android:textSize="@dimen/ccw_regular_text_size"
        tools:text="03 Feb 2015"/>

    <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
        android:id="@+id/ccw_exchange_rate_amount_and_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ccw_sold_quantity_and_currency"
        android:layout_marginEnd="@dimen/margin_text"
        android:layout_marginRight="@dimen/margin_text"
        android:layout_toEndOf="@+id/ccw_customer_image"
        android:layout_toRightOf="@+id/ccw_customer_image"
        android:singleLine="true"
        android:textColor="@color/ccw_contract_history_exchange_rate_text"
        android:textSize="@dimen/ccw_regular_text_size"
        android:text="@string/ccw_contract_history_exchange_rate_amount_and_currency"/>

    <com.bitdubai.fermat_android_api.layer.definition.wallet.views.FermatTextView
        android:id="@+id/ccw_customer_status_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ccw_last_update_date"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:singleLine="true"
        android:textColor="@color/ccw_contract_history_customer_name_text"
        android:textSize="@dimen/ccw_subtitle_text"
        tools:text="@string/ccw_contract_history_action_filter_succeed_text"/>
</RelativeLayout>
